k8s/05-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: comforthotel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
        tier: edge
    spec:
      containers:
        - name: gateway
          image: comforthotel-gateway:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /nginx-health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /nginx-health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: comforthotel
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
