k8s/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comforthotel
  namespace: comforthotel
spec:
  ingressClassName: public
  rules:
    - host: hotel.y-not-devs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
